Asher Fixed Bugs, Polished Pages, and Aligned UX

--- a/VocationalNYC/static/css/course_list.css
+++ b/VocationalNYC/static/css/course_list.css
@@ -30,7 +30,7 @@
             --blue-90: #00206B;
             --blue-80: #033493;
             --blue-70: #064AB7;
-        --blue-50: #1263D3;
+            --blue-50: #1263D3;
             --blue-30: #358CE7;
             --blue-20: #6AB4F4;
             --blue-15: #B1DCFB;
@@ -62,13 +62,6 @@
 
         }
 
-        a {
-            text-decoration: none;
-            transition: color 0.5s
-        }
-
-        a:hover, a:active {
-        }
 
         .Small-Icon {
             display: inline-block;
@@ -448,7 +441,9 @@
             font-size: 0.75rem;
             line-height: 1.3;
             font-weight: 700;
-color: #a2ccb6;!important;        }
+            color: #a2ccb6;!important;
+
+        }
 
         a.Course-Reviews-Outer-Container {
             transition: color 0.5s
@@ -2893,14 +2888,14 @@ margin-top: 1em;
         }
 
 
-/*html, body {*/
-/*    height: 100%;*/
-/*    overflow: auto;*/
-/*    scrollbar-width: none; !* Firefox *!*/
-/*    -ms-overflow-style: none; !* IE and Edge *!*/
-/*}*/
+html, body {
+    height: 100%;
+    overflow: auto;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+}
 
-/*html::-webkit-scrollbar,*/
-/*body::-webkit-scrollbar {*/
-/*    display: none; !* Chrome, Safari, Opera *!*/
-/*}*/
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
+}
